# P5R-SML

./: Cargo.toml  README.md
src/: bin.rs  bindings.rs  build.rs  lib.rs  scanner.rs  spd.rs  spd_load.rs  utils.rs  vfs.rs
src/cri_hooks/: mod.rs
src/cri_hooks/binder/: hook_bind_cpk.rs  hook_bind_file.rs  hook_bind_files.rs  hook_find.rs  hook_get_size_for_bind_files.rs  hook_get_status.rs  hook_set_priority.rs  hook_unbind.rs
src/cri_hooks/io/: hook_exists.rs  hook_open.rs
src/cri_hooks/loader/: hook_register_file.rs
src/defs/: dinput8_gnu.def  dinput8_msvc.def
src/formats/: mod.rs
src/formats/pac/: builder.rs  mod.rs
src/formats/spd/: builder.rs  mod.rs
src/hooks/: mod.rs
src/hooks/binder/: bind_cpk.rs  bind_file.rs  bind_files.rs  find.rs  get_size_for_bind_files.rs  get_status.rs  mod.rs  set_priority.rs  unbind.rs
src/hooks/io/: exists.rs  mod.rs  open.rs
src/hooks/loader/: loader_tick.rs  mod.rs  register_file.rs
src/pac/: mod.rs  pac_builder.rs
src/spd/: hook_spd_tick.rs  mod.rs  spd_builder.rs
src/vfs/: allocator.rs  binder.rs  mod.rs  patcher.rs  spd.rs
src/vfs/patcher/: mod.rs  pac.rs
