[package]
name = "P5R_SML"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[lib]
crate-type = ["cdylib"]
name = "dinput8"
path = "src/lib.rs"

[dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "winbase", "minwindef", "ntdef"] }
once_cell = "1.21.3"
retour = { version = "0.3.1", features = ["static-detour"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }