[package]
build = "src/build.rs"
edition = "2024"
name = "P5R_SML"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "dinput8"
path = "src/lib.rs"

[dependencies]
once_cell = "1.21.3"
retour = {version = "0.3.1", features = ["static-detour"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
winapi = {version = "0.3.9", features = ["fileapi", "handleapi", "winbase", "minwindef", "ntdef"]}
windows = {version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_LibraryLoader",
]}
