[package]
build = "src/build.rs"
edition = "2024"
name = "P5R_SML"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "dinput8"
path = "src/lib.rs"

[dependencies]
once_cell = "1.21.4"
retour = {version = "0.3.1", features = ["static-detour"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
windows = {version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_LibraryLoader",
  "Win32_Storage_FileSystem",
]}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
